# projects-labs

./: package-lock.json  package.json  sample.html
voquill-main/apps/desktop/src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json  tauri.dev.conf.json  tauri.local.conf.json  tauri.prod.conf.json
voquill-main/apps/desktop/src-tauri/archlinux/: .SRCINFO  PKGBUILD
voquill-main/apps/desktop/src-tauri/capabilities/: default.json
voquill-main/apps/desktop/src-tauri/icons/: icon.icns
voquill-main/apps/desktop/src-tauri/macos/: Voquill.entitlements
voquill-main/apps/desktop/src-tauri/nsis/: installer-hooks.nsh
voquill-main/apps/desktop/src-tauri/resources/: trigger-hotkey.sh
voquill-main/apps/desktop/src-tauri/src/: app.rs  commands.rs  errors.rs  flavor_env.rs  lib.rs  main.rs  overlay.rs  pill_process.rs
voquill-main/apps/desktop/src-tauri/src/db/: api_key_queries.rs  app_target_queries.rs  chat_message_queries.rs  conversation_queries.rs  hotkey_queries.rs  mod.rs  paired_remote_device_queries.rs  preferences_queries.rs  term_queries.rs  tone_queries.rs  transcription_queries.rs  user_queries.rs
voquill-main/apps/desktop/src-tauri/src/db/migrations/: 000_schema.sql  001_user_profiles.sql  002_transcriptions.sql  003_terms.sql  004_hotkeys.sql  006_user_preferred_microphone.sql  007_user_interaction_chime.sql  008_transcription_audio.sql  009_api_keys.sql  010_user_ai_preferences.sql  011_transcription_inference_metadata.sql  012_terms_is_replacement.sql  013_transcription_processing_metadata.sql  014_user_word_stats.sql  015_user_preferences.sql  016_transcription_warnings.sql  017_user_preferred_language.sql  018_tones.sql  019_app_targets.sql  020_app_target_tone_id.sql  022_user_preferences_initial_tones.sql  023_app_target_icon_path.sql  024_cleanup_default_tones.sql  025_user_preferences_device.sql  026_api_key_model.sql  027_user_preferences_ollama.sql  028_user_has_finished_tutorial.sql  029_user_preferences_got_started_at.sql  030_gpu_enumeration_enabled.sql  031_paste_keybind.sql  032_app_target_paste_keybind.sql  033_transcription_timing_metrics.sql  034_api_key_openrouter_config.sql  035_api_key_base_url.sql  036_api_key_azure_region.sql  037_agent_mode.sql  038_last_seen_feature.sql  039_is_enterprise.sql  040_language_switch.sql  041_microphone_to_preferences.sql  (+24 more)
voquill-main/apps/desktop/src-tauri/src/domain/: api_key.rs  app_target.rs  chat_message.rs  conversation.rs  hotkey.rs  keyboard.rs  mod.rs  monitor.rs  overlay.rs  paired_remote_device.rs  permissions.rs  preferences.rs  recording.rs  term.rs  tone.rs  transcription.rs  user.rs
voquill-main/apps/desktop/src-tauri/src/platform/: app_info.rs  audio.rs  keyboard.rs  mod.rs  paste_keybind.rs
voquill-main/apps/desktop/src-tauri/src/platform/linux/: accessibility.rs  audio.rs  compositor.rs  detect.rs  feedback.rs  init.rs  input.rs  keyboard.rs  keyboard_language.rs  mod.rs  monitor.rs  (+5 more)
voquill-main/apps/desktop/src-tauri/src/state/: database.rs  mod.rs  oauth.rs  overlay.rs  remote_receiver.rs
voquill-main/apps/desktop/src-tauri/src/system/: audio_feedback.rs  audio_store.rs  bridge_server.rs  crypto.rs  diagnostics.rs  enterprise_oidc.rs  google_oauth.rs  gpu.rs  mod.rs  models.rs  oauth_callback_page.rs  paths.rs  remote_receiver.rs  remote_sender.rs  storage_repo.rs  tray.rs
voquill-main/apps/desktop/src-tauri/src/utils/: encoding.rs  log_sanitizer.rs  mod.rs
voquill-main/apps/desktop/src-tauri/windows/fragments/: vc-runtime.wxs
voquill-main/apps/windows-installer/src-tauri/: Cargo.toml  tauri.conf.json
voquill-main/apps/windows-installer/src-tauri/capabilities/: default.json
voquill-main/apps/windows-installer/src-tauri/src/: main.rs
(+1151 files in other folders)
