[package]
name = "Voquill"
version = "0.1.0"
description = "AI voice dictation"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
tauri = { version = "=2.10.3", features = ["protocol-asset", "tray-icon", "image-png", "devtools", "macos-private-api"] }
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
cpal = "0.15"
tauri-plugin-os = "2.3.1"
rdev = { git = "https://github.com/josiahsrc/rdev" }
strum = "0.24"
rodio = "0.17"
wgpu = "0.20"
hound = "3.5"
base64 = "0.21"
ferrous-focus = { git = "https://github.com/MichaelWGibson/ferrous-focus" }
image = { version = "0.25.2", default-features = false, features = ["jpeg"] }
rand = "0.8"
sha2 = "0.10"
url = "2"
jsonwebtoken = "9"
dotenvy = "0.15"
chrono = "0.4"
tokio = { version = "1", features = ["time", "net", "io-util", "sync"] }
hostname = "0.4"
rfd = "0.15"
zip = { version = "2", default-features = false, features = ["deflate"] }
regex = "1"
once_cell = "1"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
cocoa = "0.24"
objc = "0.2"
dispatch = "0.2"
core-foundation-sys = "0.8"
block = "0.1"
arboard = "3"
rust_macos_pill = { path = "../../../packages/rust_macos_pill" }

[target.'cfg(target_os = "linux")'.dependencies]
enigo = "0.1"
arboard = { version = "3", features = ["wayland-data-control"] }
gtk = { version = "0.18", package = "gtk" }
x11 = "2.21"
libpulse-binding = "2"
libpulse-simple-binding = "2"

[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.1"
arboard = "3"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"cargo-clippy\"))"] }
