[package]
name = "voquill-installer"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
tauri = { version = "=2.10.3", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "fs", "sync"] }
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging"
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
